# code_test

./: .gitignore  default.tfvars  readme.md  rustk8s.jmx
docker/: Cargo.toml  LICENSE  Multistage.Dockerfile
docker/src/: helloworld.rs  httpserver.rs  lib.rs  restapihttpserver.rs
helm/rustk8s/: Chart.yaml  values.yaml
helm/rustk8s/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/rustk8s/templates/tests/: test-connection.yaml
terraform/: deploy.tf  init.tf  main.tf  variables.tf
