[package]
name = "rustwebservice"
version = "0.3.0"
authors = ["jaya-p"]
edition = "2018"
default-run = "restapiwebservice"

[lib]
# with this name, this lib is referred to rustwebservice package in source code
#   and resulted lib file is librustwebservice.rlib
name = "rustwebservice" 
path = "src/lib.rs" 

[[bin]]
name = "cli"
path = "src/bin/maincli.rs"

[[bin]]
name = "webservice"
path = "src/bin/mainweb.rs"

[[bin]]
name = "restapiwebservice"
path = "src/bin/mainrestapi.rs"

[dependencies]
# hyper used for HTTP server library
hyper = "0.13.6"
# tokio runtime for Hyper
tokio = { version = "0.2", features = ["full"] }
# serde_json serialize and deserialize json for REST
serde_json = "1.0"
# unit testing
reqwest = { version = "0.10.6", features = ["blocking"] }